--- a/doc/DokumenSkripsi/skripsi.tex
+++ b/doc/DokumenSkripsi/skripsi.tex
@@ -73,6 +73,7 @@
 \usepackage{courier}
 \usepackage{listings}
 \usepackage{ amssymb }
+\usepackage{enumitem}
 \lstset{
 	numbers=none,
 	showspaces=false,
