--- a/doc/DokumenSkripsi/Bab/bab3.tex
+++ b/doc/DokumenSkripsi/Bab/bab3.tex
@@ -1,9 +1,38 @@
 \chapter{Analisis}
 \section{Analisis Kebutuhan Perangkat Lunak \textit{Bluetape}}
+Pengerjaan untuk menganalisis \textit{bluetape} dilakukan dengan melakukan survei dengan pengguna--pengguna aplikasi tersebut. Survei dilakukan melalui \textit{google form} dan \textit{link} dari survei tersebut dibagikan melalui \textit{mailing list} dosen dan grup informatika UNPAR angkatan 2017. Pertanyaan pada survei tersebut cukup singkat. Pertanyaan hanya menanyakan nama dan tipe pengguna \textit{bluetape} dan disediakan suatu text field untuk memasukkan \textit{feedback} dari pengguna. Adapun \textit{feedback} yang telah terkumpulkan tersedia pada tabel \ref{tab:analisis pengguna}.
 
 \begin{table}[H]
 	\centering
-	\begin{tabular}{|c|c|c|c|}
+	\label{tab:analisis pengguna}
+	\resizebox{\textwidth}{!}{
+	\begin{tabular}{|l|l|l|l|}
+	\hline
+	No & Deskripsi & \textit{Issue Number}  & Status \\ \hline
+	1 & Memperbaiki ekspor ke xls pada EntriJadwalDosen & \#1  & Akan diimplementasi\\ \hline
+	2 & Memperbaharui \textit{google api} dan \textit{phpspreadsheet} & \#2  & \\ \hline
+	3 & Tampilan \textit{chart} pada ManajemenCetakTranskrip & \#3  & \\ \hline
+	4 & Tampilan \textit{chart} pada ManajemenPerubahanKuliah & \#4  & \\ \hline
+	5 & Mahasiswa dengan format NPM baru tidak dapat login & \#5  & \\ \hline
+	6 & Mahasiswa baru tidak dapat melihat LihatJadwalDosen & \#21  & \\ \hline
+	7 & Kolom pada EntriJadwalDosen dan LihatJadwalDosen tidak seragam  & \#6 & \\ \hline
+	8 & Fungsi Tab pada LihatJadwalDosen tidak berfungsi & \#7 & \\ \hline
+	9 & Pengelompokkan rekap perubahan jadwal pada mata kuliah yang sama & \#8 & \\ \hline
+	10 & Forum Q\&A pada \textit{bluetape} & \#9 & \\ \hline
+	11 & \textit{Scheduling} matakuliah pada googlemeet/zoom & \#10 & \\ \hline
+	12 & Mengubah atau membatalkan permohonan & \#11 & \\ \hline
+	13 & Menambahkan jam kuliah selesai di perubahan kelas & \#12 & \\ \hline
+	14 & Memperbaiki form dan link yang tidak aktif & \#13 & \\ \hline
+	15 & Mengintegrasi \textit{bluetape} dengan SSO UNPAR & \#14 & \\ \hline
+	16 & Menambah list permintaan pada \textit{bluetape} & \#15 & \\ \hline
+	17 & Pengajuan surat keterangan aktif kuliah secara online & \#16 & \\ \hline
+	18 & Notifikasi email untuk mahasiswa jika permintaan sudah diselesaikan & \#17 & \\ \hline
+	19 & Dapat melihat profil mahasiswa & \#18 & \\ \hline
+	20 & Halaman histori dan request transkrip terpisah & \#19 & \\ \hline
+	21 & Fitur bahasa indonesia dan inggris & \#20 & \\ \hline
+	
 	
 	\end{tabular}
+	}
+	\caption{Tabel analsis kebutuhan pengguna perangkat \textit{bluetape}}
 \end{table}
