--- a/doc/DokumenSkripsi/Bab/bab3.tex
+++ b/doc/DokumenSkripsi/Bab/bab3.tex
@@ -10,29 +10,29 @@ Pengerjaan untuk menganalisis \textit{bluetape} dilakukan dengan melakukan surve
 	\hline
 	No & Deskripsi & \textit{Issue Number}  & Status \\ \hline
 	1 & Memperbaiki ekspor ke xls pada EntriJadwalDosen & \#1  & Akan diimplementasi\\ \hline
-	2 & Memperbaharui \textit{google api} dan \textit{phpspreadsheet} & \#2  & \\ \hline
-	3 & Tampilan \textit{chart} pada ManajemenCetakTranskrip & \#3  & \\ \hline
-	4 & Tampilan \textit{chart} pada ManajemenPerubahanKuliah & \#4  & \\ \hline
-	5 & Mahasiswa dengan format NPM baru tidak dapat login & \#5  & \\ \hline
-	6 & Mahasiswa baru tidak dapat melihat LihatJadwalDosen & \#21  & \\ \hline
-	7 & Kolom pada EntriJadwalDosen dan LihatJadwalDosen tidak seragam  & \#6 & \\ \hline
-	8 & Fungsi Tab pada LihatJadwalDosen tidak berfungsi & \#7 & \\ \hline
-	9 & Pengelompokkan rekap perubahan jadwal pada mata kuliah yang sama & \#8 & \\ \hline
-	10 & Forum Q\&A pada \textit{bluetape} & \#9 & \\ \hline
-	11 & \textit{Scheduling} matakuliah pada googlemeet/zoom & \#10 & \\ \hline
-	12 & Mengubah atau membatalkan permohonan & \#11 & \\ \hline
-	13 & Menambahkan jam kuliah selesai di perubahan kelas & \#12 & \\ \hline
-	14 & Memperbaiki form dan link yang tidak aktif & \#13 & \\ \hline
-	15 & Mengintegrasi \textit{bluetape} dengan SSO UNPAR & \#14 & \\ \hline
-	16 & Menambah list permintaan pada \textit{bluetape} & \#15 & \\ \hline
-	17 & Pengajuan surat keterangan aktif kuliah secara online & \#16 & \\ \hline
-	18 & Notifikasi email untuk mahasiswa jika permintaan sudah diselesaikan & \#17 & \\ \hline
-	19 & Dapat melihat profil mahasiswa & \#18 & \\ \hline
-	20 & Halaman histori dan request transkrip terpisah & \#19 & \\ \hline
-	21 & Fitur bahasa indonesia dan inggris & \#20 & \\ \hline
+	2 & Memperbaharui \textit{google api} dan \textit{phpspreadsheet} & \#2  & Akan diimplementasi \\ \hline
+	3 & Tampilan \textit{chart} pada ManajemenCetakTranskrip & \#3  & Akan diimplementasi\\ \hline
+	4 & Tampilan \textit{chart} pada ManajemenPerubahanKuliah & \#4  & Akan diimplementasi\\ \hline
+	5 & \makecell[l]{Mahasiswa dengan format NPM baru \\ tidak dapat login dan LihatJadwalDosen} & \#5  & Akan diimplementasi\\ \hline
+	6 & \makecell[l]{Kolom pada EntriJadwalDosen dan \\ LihatJadwalDosen tidak seragam}  & \#6 & Akan diimplementasi\\ \hline
+	7 & Fungsi Tab pada LihatJadwalDosen tidak berfungsi & \#7 & Akan diimplementasi\\ \hline
+	8 & \makecell[l]{Pengelompokkan rekap perubahan jadwal\\ pada mata kuliah yang sama} & \#8 & \\ \hline
+	9 & Forum Q\&A pada \textit{bluetape} & \#9 & \\ \hline
+	10 & \textit{Scheduling} matakuliah pada googlemeet/zoom & \#10 & Tidak diimplementasi\\ \hline
+	11 & Mengubah atau membatalkan permohonan & \#11 & Akan diimplementasi\\ \hline
+	12 & Menambahkan jam kuliah selesai di perubahan kelas & \#12 & Akan diimplementasi\\ \hline
+	13 & Memperbaiki form dan link yang tidak aktif & \#13 & Tidak diimplementasi\\ \hline
+	14 & Mengintegrasi \textit{bluetape} dengan SSO UNPAR & \#14 & Tidak diimplementasi\\ \hline
+	15 & Menambah list permintaan pada \textit{bluetape} & \#15 & Tidak diimplementasi\\ \hline
+	16 & Pengajuan surat keterangan aktif kuliah secara online & \#16 & \\ \hline
+	17 & \makecell[l]{Notifikasi email untuk mahasiswa \\ jika permintaan sudah diselesaikan} & \#17 & Akan diimplementasi\\ \hline
+	18 & Dapat melihat profil mahasiswa & \#18 & Tidak diimplementasi\\ \hline
+	19 & Halaman histori dan request transkrip terpisah & \#19 & \\ \hline
+	20 & Fitur bahasa indonesia dan inggris & \#20 & \\ \hline
+	21 & Pagination tidak terstyle dengan baik & \#22 & Akan diimplementasi\\ \hline
+	22 & Format Datetimepicker tidak konsisten &\#23 & Akan diimplementasi\\ \hline
 	
 	
-	\end{tabular}
-	}
+	\end{tabular}}
 	\caption{Tabel analsis kebutuhan pengguna perangkat \textit{bluetape}}
 \end{table}
