--- a/doc/DokumenSkripsi/data.tex
+++ b/doc/DokumenSkripsi/data.tex
@@ -276,6 +276,7 @@
 \hyphenation{tek-nik}
 \hyphenation{in-for-ma-ti-ka}
 \hyphenation{me-mung-kin-kan}
+\hyphenation{boot-strap}
 %=============================================================================
 
 %_____________________________________________________________________________
