--- a/doc/DokumenSkripsi/skripsi.tex
+++ b/doc/DokumenSkripsi/skripsi.tex
@@ -74,6 +74,7 @@
 \usepackage{listings}
 \usepackage{ amssymb }
 \usepackage{enumitem}
+\usepackage{makecell}
 \lstset{
 	numbers=none,
 	showspaces=false,
