--- a/doc/DokumenSkripsi/Bab/bab3.tex
+++ b/doc/DokumenSkripsi/Bab/bab3.tex
@@ -36,3 +36,16 @@ Pengerjaan untuk menganalisis \textit{bluetape} dilakukan dengan melakukan surve
 	\end{tabular}}
 	\caption{Tabel analsis kebutuhan pengguna perangkat \textit{bluetape}}
 \end{table}
+
+
+\section{Bluetape}
+
+\textit{Bluetape} adalah aplikasi + framework untuk membuat urusan-urusan paper-based di FTIS UNPAR menjadi paperless.\footnote{\url{https://github.com/ftisunpar/BlueTape}}
+
+\subsection{Instalasi}
+
+\subsection{Struktur Bluetape}
+
+\subsection{Pengaturan Dasar Bluetape}
+
+\subsection{Database}
