--- a/doc/DokumenSkripsi/Bab/bab2.tex
+++ b/doc/DokumenSkripsi/Bab/bab2.tex
@@ -71,12 +71,9 @@ Fungsi \textit{constructor} yang dijalankan pada \textit{codeigniter} harus mema
 
 \textit{Model} berfungsi sebagai \textit{logic} dari aplikasi. \textit{ Model} pada \textit{CodeIgniter} bersifat opsional, tetapi disediakan untuk \textit{developer} yang ingin menggunakan MVC\cite{codeigniter3}. 
 
+
 \begin{lstlisting}
 class Blog_model extends CI_Model {
-
-	public $title;
-	public $content;
-	public $date;
 	
 	public function get_last_ten_entries()
 	{
@@ -103,7 +100,7 @@ $config['db_debug'] = TRUE;
 $this->load->model('model_name', '', $config);
 \end{lstlisting}
 
-File \texttt{database.php} diatas menyimpan kredensial dari \textit{database} yang digunakan. Mulai dari \textit{hostname, username, password, dst}.
+File \texttt{database.php} diatas menyimpan kredensial dari \textit{database} yang digunakan. Mulai dari \textit{hostname, username, password dll}.
 
 \subsection{View}
 
@@ -125,15 +122,16 @@ $this->load->view('welcome_message',array(
 Selanjutnya untuk menampilkan data tersebut ke halaman
  
 \begin{lstlisting}
-html>
-<head>
-</head>
-<body>
-	<h1><?php echo $t ?></h1>
-</body>
-</html>
+<?php echo $t ?>
 \end{lstlisting}
 
+\subsection{\textit{Libraries} pada Code Igniter}
+\subsubsection{Loader}
+\subsubsection{Migration}
+\subsubsection{Email}
+\subsubsection{Input}
+\subsubsection{Migrations}
+\subsubsection{Session}
 
 \section{Phpspreadsheet}
 \label{section:phpspreadsheet}
@@ -161,64 +159,153 @@ PhpSpreadsheet adalah \textit{library} yang ditulis dengan bahasa PHP berguna un
 \label{tab:phpspreadsheet supported}
 \end{table}
 
+\subsection{Kelas pada Phpspreadsheet}
+Pada penelitian kali ini kelas utama yang digunakan adalah kelas \textit{Spreadsheet}. Kelas \textit{Spreadsheet} dapat diakses menggunakan \texttt{use PhpOffice$\backslash$PhpSpreadsheet$\backslash$Spreadsheet}.
+ \textit{Method} yang dimiliki oleh \textit{library} \textit{PhpSpreadsheet} yang digunakan pada penelitian kali ini:
+
+\begin{itemize}
+	\item \textit{Spreadsheet} \\
+	Kelas \textit{Spreadsheet} dapat diakses dengan menggunakan: 
+	\begin{lstlisting}
+use PhpOffice\PhpSpreadsheet\Spreadsheet;
+$spreadsheet = new Spreadsheet();
+	\end{lstlisting} 
+	\textit{Constructor} kelas \textit{Spreadsheet} tidak menerima parameter apapun, dan \textit{return value} adalah \textit{mixed}. \textit{Method} yang tersedia pada kelas \texttt{Spreadsheet}:  
+ \begin{itemize}
+ 	\item \textbf{\texttt{createSheet([\$sheetIndex:null|int=null])}}\\ \textit{Method} ini berfungsi untuk membuat \textit{sheet}.\\
+ 	\textit{Parameter}: \texttt{\$sheetIndex}, \textit{index} dari sheet dikosongkan jika menaruh sheet pada \textit{index} terakhir. \\ 
+ 	\textit{Return}: Kelas \texttt{Worksheet}.
+ 	
+ 	\item \textbf{\texttt{setActiveSheetIndex(\$pIndex:int)}}\\ Memilih \textit{sheet} yang ingin dijadikan \textit{active} berdasarkan \textit{index}. \\
+ 	\textit{Parameter}: \$pIndex, tipe data \textit{int}, \textit{index} dari \textit{Worksheet}. \\
+ 	\textit{Return}: Kelas \texttt{Worksheet}.
+ 	
+ 	\item \textbf{\texttt{getActiveSheet()}}\\
+ 	 Mengembalikan kelas \textit{Worksheet} yang aktif.\\
+ 	\textit{Parameter}: Tidak ada. \\ 
+ 	\textit{Return}: Kelas \texttt{Worksheet}.
+ \end{itemize}
+
+\item \textit{Worksheet} \\ 
+Kelas \textit{Worksheet} adalah kelas yang mengatur nilai dari \textit{cell}, \textit{cell style}, judul \textit{sheet} dll. Pembuatan kelas ini dapat dilakukan dengan:
+\begin{lstlisting}
+$spreadsheet->createSheet();
+\end{lstlisting}
+Variabel \textit{\$spreadsheet} adalah kelas \texttt{Spreadsheet}, \textit{method} yang tersedia pada kelas \texttt{Worksheet}:
+
+\begin{itemize}
+	\item \textbf{\texttt{getStyle(\$pCellCoordinate:string)}}\\ 
+	Mengembalikan kelas \texttt{Style}.\\
+	\textit{Parameter}: \texttt{\$pCellCoordinate} koordinat dari \textit{cell} atau \textit{range}, contoh : 'A1','A1:E1'.\\
+	\textit{Return}: Kelas \texttt{Style}.
+	
+	\item \textbf{\texttt{setCellValue(\$pCoordinate : string , \$pValue : mixed )}}\\ 
+	Merubah suatu nilai pada \textit{cell} tertentu. \\ 
+	\textit{Parameter}:
+	\begin{itemize}
+		\item \texttt{\$pCoordinate}: Koordinat dari \textit{cell} contoh: 'A1'.
+		\item \texttt{\$pValue}: Nilai baru dari \textit{cell} tersebut.
+	\end{itemize}
+	\textit{Return}: \texttt{\$this}.
+	
+	\item \textbf{\texttt{mergeCells(\$pRange:string)}}\\ Melakukan \textit{merge} pada \textit{cell}. \\ 
+	\textit{Parameter}: \texttt{\$pRange} \textit{cell range} yang ingin dilakukan \textit{merge}, contoh: 'A1:E1'. \\
+	\textit{Return}: \texttt{\$this}.
+	\item \textbf{\texttt{setTitle(\$pValue:string, \$updateFormulaCellReferences:bool = true, \$validate:bool:true)}}\\
+	 Berfungsi untuk memberi judul pada \textit{sheet}. \\
+	 \textit{Parameter}:
+	 \begin{itemize}
+	 	\item \texttt{\$pValue}: \textit{String} yang akan dijadikan nama judul.
+	 	\item \texttt{\$updateFormulaCellReferences}: \textit{Flag} untuk menentukan \textit{cell reference} pada \textit{formula} akan dirubah mengikuti judul baru. Direkomendasikan untuk tidak merubah nilai variabel ini.
+	 	\item \texttt{\$validate}: Nilai asal adalah \textit{true}, pasang nilai \textit{false} untuk melewati validasi dari judul baru.
+	 \end{itemize}
+ 	\textit{Return}: \texttt{\$this}.
+	\item \textbf{\texttt{getRowDimension(\$pRow:int,\$create:bool = true)}} \\ 
+	Mengambil dimensi baris pada baris tertentu. \\
+	\textit{Parameter}: 
+	\begin{itemize}
+		\item \texttt{\$pRow}: \textit{Index} dari baris.
+		\item \texttt{\$create}: Nilai \textit{default} adalah \textit{true}.
+	\end{itemize}
+	\textit{Return}: Kelas \texttt{RowDimension}.
+	\item \textbf{\texttt{getColumnDimension(\$pColumn:string, \$create : bool = true)}} \\
+	Mengambil dimensi kolom pada kolom tertentu
+	\textit{Parameter}:
+	\begin{itemize}
+		\item \texttt{\$pColumn}: String dari kolom, contoh: 'A'.
+		\item \texttt{\$create}: Nilai \textit{default} adalah \textit{true}.
+	\end{itemize}
+	\textit{Return}: Kelas \texttt{ColumnDimension}.
+\end{itemize}
+
+\item \textit{Style} \\ 
+Kelas \textit{Style} adalah kelas yang mengatur \textit{style} dari suatu \textit{cell} seperti \textit{alignment}, \textit{fill},\textit{font} dll. Kelas \textit{Style} dapat diakses menggunakan:
+\begin{lstlisting}
+$worksheet->getStyle('A1');
+\end{lstlisting}
+Variabel \textit{\$worksheet} adalah kelas \textit{Worksheet}, \textit{method} yang tersedia pada kelas \texttt{Style}:
+	\begin{itemize}
+		\item \textbf{\texttt{getFill()}}\\
+		 Mengembalikan kelas \textit{Fill}. untuk merubah \textit{fill} pada suatu \textit{cell} dapat memanggil \texttt{setFillType()} pada kelas \textit{Fill}.	\\
+		 \textit{Parameter}: Tidak ada.
+		 \textit{Return}: Kelas \texttt{Fill}.
+		\item \textbf{\texttt{getAlignment()}} \\
+		 Mengembalikan kelas \textit{Alignment}, untuk merubah \textit{alignment} pada suatu \textit{cell} dapat memanggil \texttt{setHorizontal()} atau \texttt{setVertical()} pada kelas \textit{Alignment}. \\
+		\textit{Parameter}: Tidak ada. \\
+		\textit{Return}: Kelas \texttt{Alignment}.
+		\item \textbf{\texttt{getFont}} \\
+		 Mengembalikan kelas \textit{Font}, untuk merubah penebalan kata dapat menggunakan \texttt{setBold()} dengan masukan \textit{boolean}. \\
+		\textit{Parameter}: Tidak ada. \\
+		\textit{Return}: Kelas \texttt{Font}.
+		
+	\end{itemize}
+
+\item \textit{Xls} \\
+Kelas \texttt{Xls} memiliki 2 tipe yaitu \textit{writer} dan \textit{reader}. Pada penelitian kali ini tipe \textit{Xls} yang digunakan hanya tipe \textit{writer}. Kelas \textit{Xls} dapat diinisiasi dengan:
+\begin{lstlisting}
+$writer = new \PhpOffice\PhpSpreadsheet\Writer\Xls($spreadsheet);
+\end{lstlisting}
+\textit{Constructor} dari kelas \textit{Xls} menerima masukan berupa kelas \textit{Spreadsheet}, \textit{method} dari kelas \texttt{Xls}: \\
+\textbf{\texttt{Save(\$pFilename:resource|string)}}, berfungsi untuk menyimpan \textit{Spreadsheet} menjadi \textit{file} \\
+\textit{Parameter}: \texttt{\$pFilename}, menerima masukan \textit{resource} atau string. \\
+\textit{Return}: \texttt{void}. 
+
+
+\end{itemize} 
+
 
 \subsection{Instalasi Phpspreadsheet}
-Sebelum dapat menginstalasi phpspreadsheet dibutuhkan composer. Composer dapat diunduh pada \url{getcomposer.org}. dan menjalankan perintah:
+Sebelum dapat menginstalasi phpspreadsheet dibutuhkan composer. Composer dapat diunduh pada \url{getcomposer.org}. 
 
 \begin{lstlisting}
 composer require phpoffice/phpspreadsheet
 \end{lstlisting}
 
-Masukkan perintah tersebut untuk membuat file \texttt{composer.json} dan menginstalasi \textit{dependencies} tersebut. Contoh untuk menggunakan phpspreadsheet dapat dilihat sebagai berikut:
+perintah tersebut digunakan untuk membuat file \texttt{composer.json} dan menginstalasi \textit{dependencies} tersebut. 
 
 \begin{lstlisting}
 <?php
 
 require 'vendor/autoload.php';
-
 use PhpOffice\PhpSpreadsheet\Spreadsheet;
-
 $spreadsheet = new Spreadsheet();
-$sheet = $spreadsheet->getActiveSheet();
 \end{lstlisting}
 
-Penggunaan phpspreadsheet secara dasar membutuhkan perintah \texttt{use PhpOffice$\backslash$Phpspread-\\sheet$\backslash$Spreadsheet} dan \texttt{new Spreadsheet()}. Untuk menrubah, menambah atau mengganti isi dari suatu kolom dibutuhkan \textit{method} \texttt{getActiveSheet()}.
+Penggunaan phpspreadsheet secara dasar membutuhkan perintah \texttt{use PhpOffice$\backslash$Phpspread-\\sheet$\backslash$Spreadsheet} dan \texttt{new Spreadsheet()}.
 
-\subsection{Menempatkan Nilai pada Kolom tertentu}
+\subsection{Contoh Penulisan Nilai pada \textit{cell}}
 
 \textit{Phpspreadsheet} menyediakan suatu \textit{method} untuk dapat menaruh atau merubah \textit{value} pada cell tertentu
 
 \begin{lstlisting}
+$sheet = $spreadsheet->getActiveSheet();
 $sheet->setCellValue('A1', 'PhpSpreadsheet');
 \end{lstlisting}
 
- Fungsi diatas akan menulis \lq PhpSpreadsheet \rq pada kolom \lq A1 \rq .
+ Fungsi diatas akan menulis \lq PhpSpreadsheet \rq pada kolom \lq A1 \rq . \textit{PhpSpreadsheet} memiliki \textit{method} untuk merubah nilai dari \textit{cell} tertentu dengan menggunakan \texttt{setCellValue('kolom','nilai')}.
 
-\begin{lstlisting}
-$sheet->getStyle('A1')->getFont()->setBold(true);
-\end{lstlisting}
 
- \textit{Method} diatas dapat digunakan untuk membuat nilai pada kolom \lq A1\rq menjadi \textit{bold}.
-
-\begin{lstlisting}
-$arrayData = [
-	[NULL, 2010, 2011, 2012],
-	['Q1',   12,   15,   21],
-	['Q2',   56,   73,   86],
-	['Q3',   52,   61,   69],
-	['Q4',   30,   32,    0],
-];
-$spreadsheet->getActiveSheet()
-	->fromArray(
-		$arrayData,  
-		NULL,        
-		'C3'         
-	);
-\end{lstlisting}
-
-\textit{Phpspreadsheet} menyediakan \textit{method} \texttt{fromArray} yang dapat menerima masukan berupa \textit{array} 2 dimensi. \texttt{fromArray} menerima 3 parameter. Parameter pertama berupa data dari \textit{array} tersebut, parameter kedua adalah \textit{value} yang tidak akan di set pada \textit{spreadsheet} dan parameter ketiga adalah lokasi dimana \textit{array} akan ditaruh. Secara \textit{default} parameter kedua berisi \textit{NULL} dan parameter ketiga berisi \texttt{A1}. 
-
-\subsection{Menulis Spreadsheet ke Xls }
+\subsection{Contoh Penulisan Spreadsheet ke Xls }
 
 \textit{Phpspreadsheet} dapat melakukan \textit{read and write} ke banyak format. Mulai dari \textit{xls,xlsx,csv} dll. Pada kali ini format yang akan digunakan adalah format  \textit{xls}.
 
@@ -304,16 +391,6 @@ Cara penggunaan \textit{bootstrap} adalah dengan memasukkan kelas-kelas yang dis
 
 Sebagai contoh akan dilakukan pembuatan form menggunakan \textit{bootstrap}. \texttt{<input>, <select>, <textarea>} menggunakan \textit{class form--control}, kelas tersebut sudah mengatur \textit{style} untuk \textit{focus state}, ukuran, dan tampilan umum. Sedangkan \textit{class form--group} untuk mengatur struktur dari form\cite{bootstrap}.
 
-\section{Bluetape}
 
-\textit{Bluetape} adalah aplikasi + framework untuk membuat urusan-urusan paper-based di FTIS UNPAR menjadi paperless.\footnote{\url{https://github.com/ftisunpar/BlueTape}}
-
-\subsection{Instalasi}
-
-\subsection{Struktur Bluetape}
-
-\subsection{Pengaturan Dasar Bluetape}
-
-\subsection{Database}
 
  
